<resources>
    <!--    TELA DE LOGIN-->
    <string name="app_name">GreenQuest</string>
    <string name="text_email">Digite seu e-mail</string>
    <string name="text_password">Digite sua senha</string>
    <string name="btn_login">Entrar</string>
    <string name="signup">Não tem uma conta? Registre-se aqui</string>
    <string name="link_signup">Link para cadastro</string>

    <!--     TELA DE CADASTRO-->
    <string name="signup_name">Digite seu nome</string>
    <string name="signup_email">Cadastre seu e-mail</string>
    <string name="signup_password">Cadastre uma senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="btn_register">Cadastrar</string>
    <string name="login">Já possui conta? Entre aqui</string>
    <string name="link_login">Link para tela de login</string>

    <!--    TELA PRINCIPAL-->
    <string name="txt_leagues">LIGAS</string>
    <string name="txt_practice">Praticar</string>
    <string name="txt_learn">Aprender</string>
    <string name="sub_leagues">Crie times</string>
    <string name="txt_forum">Fórum</string>
    <string name="txt_store">Loja</string>


    <!--    TELA LEARN-->
    <string name="txt_esg">ESG significa Environmental, Social and Governance (ambiental, social e governança).\n\nSão práticas relacionadas ao meio ambiente, responsabilidade social e governança de uma organização. O termo foi criado em 2004 e está relacionado aos 17 Objetivos de Desenvolvimento Sustentável estabelecidos pelo Pacto Global, envolvendo a ONU e várias entidades internacionais.\n\nA jornada do ESG envolve transformar os negócios para construir um mundo inclusivo, ético e sustentável, buscando o alinhamento entre lucro, propósito e transparência. As ideias que sustentam os investimentos ESG têm raízes antigas e foram reforçadas ao longo do tempo por preocupações ambientais e sociais.\n\nDesde 2004 o ESG cresceu significativamente tendo milhares de signatários e trilhões de dólares em ativos comprometidos com esses princípios. Os Objetivos de Desenvolvimento Sustentável da ONU também apoiam os critérios ESG e podem gerar oportunidades econômicas estimadas em trilhões de dólares.\n\nO ESG é importante para as empresas e investidores, não apenas como uma estrutura de relatórios, mas também para atender às demandas dos funcionários, reguladores e sociedade em geral. O conceito está cada vez mais presente no mundo dos negócios, mostrando que o valor de uma empresa não se baseia apenas em resultados financeiros, mas também em suas conquistas não materiais e contribuição para a sociedade.\n\nNo Brasil, o conceito de ESG tem ganhado relevância nos últimos anos, impulsionado pela mobilização do mercado e a pandemia da Covid-19. Empresas estão sendo estimuladas a repensar e criar soluções que atendam aos critérios ESG.</string>

    <!--    TELA CADASTRAR LIGAS-->
    <string name="cd_leagues">Cadastro de ligas</string>

    <!--    DESCRIÇÃO DE IMAGENS-->
    <string name="dc_logo">Logo do aplicativo GreenQuest</string>
    <string name="dc_background">Desenho de uma floresta</string>
    <string name="dc_user">Foto do usuário</string>
    <string name="dc_frame">Desenho de uma linha</string>

    <!--    DESCRIÇÃO BOTÕES-->
    <string name="btn_leagues">Botão Ligas</string>
    <string name="btn_practice">Botão Praticar</string>
    <string name="btn_learn">Botão Aprender</string>
    <string name="btn_forum">Botão Fórum</string>
    <string name="btn_store">Botão Loja</string>
    <string name="btn_google">Botão para logar com sua conta Google</string>
    <string name="title_activity_practice">Practice</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>