<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF3E8"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="87dp"
        android:layout_height="70dp"
        android:contentDescription="@string/dc_logo"
        app:layout_constraintBottom_toTopOf="@+id/imgBeChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_logo" />

    <ImageView
        android:id="@+id/ic_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/dc_user"
        app:layout_constraintBottom_toTopOf="@+id/imgBeChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toEndOf="@+id/logoHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_profile" />

    <ImageView
        android:id="@+id/imgBeChange"
        android:layout_width="411dp"
        android:layout_height="178dp"
        android:contentDescription="@string/dc_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/img_home" />

    <ScrollView
        android:id="@+id/scrHome"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBeChange"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnLeagues"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_leagues"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                app:srcCompat="@drawable/ic_leagues" />

            <TextView
                android:id="@+id/txtLeagues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/txt_leagues"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/btnLeagues"
                app:layout_constraintTop_toTopOf="@+id/btnLeagues"
                app:layout_constraintVertical_bias="0.03000002" />

            <TextView
                android:id="@+id/subLeagues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/sub_leagues"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtLeagues"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtLeagues"
                app:layout_constraintTop_toBottomOf="@+id/txtLeagues" />

            <ImageButton
                android:id="@+id/btnPractice"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_practice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLeagues"
                app:layout_constraintVertical_bias="0.03000002"
                app:srcCompat="@drawable/ic_practice" />

            <TextView
                android:id="@+id/txtPractice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/txt_practice"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/btnLeagues"
                app:layout_constraintTop_toTopOf="@+id/btnPractice"
                app:layout_constraintVertical_bias="0.03000002" />

            <ImageButton
                android:id="@+id/btnLearn"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_learn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPractice"
                app:layout_constraintVertical_bias="0.04000002"
                app:srcCompat="@drawable/ic_learn" />

            <TextView
                android:id="@+id/txtLearn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/txt_learn"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/btnLearn"
                app:layout_constraintTop_toTopOf="@+id/btnLearn"
                app:layout_constraintVertical_bias="0.03000002" />

            <ImageButton
                android:id="@+id/btnForum"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_forum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLearn"
                app:layout_constraintVertical_bias="0.08"
                app:srcCompat="@drawable/ic_forum" />

            <TextView
                android:id="@+id/txtForum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/txt_forum"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/btnForum"
                app:layout_constraintTop_toTopOf="@+id/btnForum"
                app:layout_constraintVertical_bias="0.120000005" />

            <ImageButton
                android:id="@+id/btnStore"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btn_store"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnForum"
                app:layout_constraintVertical_bias="0.08"
                app:srcCompat="@drawable/ic_store" />

            <TextView
                android:id="@+id/txtStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_medium"
                android:text="@string/txt_store"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/btnStore"
                app:layout_constraintTop_toTopOf="@+id/btnStore"
                app:layout_constraintVertical_bias="0.19" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>