<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linkSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="343dp"
        android:layout_height="535dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:contentDescription="@string/dc_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            app:srcCompat="@drawable/ic_logo" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:background="@drawable/border_edit_text"
            android:defaultFocusHighlightEnabled="false"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/text_email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#131F0F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintVertical_bias="0.04000002" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border_edit_text"
            android:ems="10"
            android:hint="@string/text_password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#131F0F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border_btn"
            android:backgroundTint="#5C9249"
            android:text="@string/btn_login"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.07999998" />

        <ImageView
            android:id="@+id/frame_login"
            android:layout_width="284dp"
            android:layout_height="34dp"
            android:contentDescription="@string/dc_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64"
            app:srcCompat="@drawable/ic_divisao" />

        <ImageButton
            android:id="@+id/loginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_login"
            app:layout_constraintVertical_bias="0.16000003"
            app:srcCompat="@drawable/ic_google_oauth" />

        <TextView
            android:id="@+id/linkRegister"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:contentDescription="@string/link_signup"
            android:fontFamily="sans-serif-medium"
            android:minHeight="48dp"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="#131F0F"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginGoogle"
            app:layout_constraintStart_toStartOf="@+id/loginGoogle"
            app:layout_constraintTop_toBottomOf="@+id/loginGoogle"
            app:layout_constraintVertical_bias="0.24000001" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>